deploy/src/main/deploy/resource-descriptors/hono-service-auth/hono-service-auth-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono-service-auth
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-service-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono-service-auth
      group: ${project.groupId}
  template:
    metadata:
      labels:
        app: hono-service-auth
        version: "${project.version}"
        group: ${project.groupId}
    spec:
      containers:
      - image: eclipse/hono-service-auth:${project.version}
        imagePullPolicy: IfNotPresent
        name: eclipse-hono-service-auth
        ports:
        - containerPort: 5671
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /etc/hono
          name: conf
          readOnly: true
        resources:
          limits:
            memory: "196Mi"
        livenessProbe:
          initialDelaySeconds: 25
          periodSeconds: 9
          tcpSocket:
            port: 5672
          timeoutSeconds: 1
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 5
          tcpSocket:
            port: 5672
          timeoutSeconds: 1
      volumes:
      - name: conf
        secret:
          secretName: hono-service-auth-conf
