deploy/src/main/deploy/resource-descriptors/hono-service-auth/hono-service-auth-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono-service-auth
    version: "${project.version}"
    group: ${project.groupId}
    hono-metrics: prometheus
  name: hono-service-auth
spec:
  ports:
  - name: amqps
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: actuator
    port: 8081
  selector:
    app: hono-service-auth
    group: ${project.groupId}
